<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BloodDonar</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="donarRegistration">Donar Registration</string>
    <string name="findDonar">Find a Donar</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="phoneNumber">Phone Number</string>
    <string name="emailId">Email Id</string>
    <string name="aPositive">A+</string>
    <string name="aNegative">A-</string>
    <string name="oNegative">O-</string>        
    <string name="oPositive">O+</string>
    <string name="bPositive">B+</string>
    <string name="bNegative">B-</string>
    <string name="abPositive">AB+</string>
    <string name="abNegative">AB-</string>
    <string name="registrationbButton">Register</string>
    <string name="areaPincode">Pin Code</string>
    <string name="selectBloodGroup">Select Blood Group</string>
    <string name="enterPinCode">Enter Pin Code</string>
    <string name="search">Search</string>
    <string name="details_DonarName"><u>Donar Name</u></string>
    <string name="details_BloodGroup"><u>Blood Group</u></string>
    <string name="details_ContactInformation"><u>Contact Information</u></string>
    <string name="donar_FirstAndLastName">FirstName LastName</string>
    <string name="donar_bloodgroup">My Blood Group</string>
    <string name="donar_phonenumber">Phone Number</string>
    <string name="donar_emailId">Email Id</string>
    <string name="leftButton">--)</string>
    <string name="rightButton">(--</string>
    <string name="donarLable">Donar</string>
    <string name="donarcount">1/100</string>
    <string name="saveDetails">Save Details</string>
    
    <string-array name="Bloodgroup">
      <item>O-</item>
      <item>O+</item>
      <item>A-</item>
      <item>A+</item>
      <item>B-</item>
      <item>B+</item>
      <item>AB-</item>
      <item>AB+</item>
     </string-array>

    
    <color name="Red">#ff0000</color>
    <color name="blue">#0000ff</color>
    <color name="green">#00ff00</color>
</resources>
